crates/wdl-grammar/tests/parsing/empty-index-expr/source.errors
error: expected expression, but found `]`
  ┌─ tests/parsing/empty-index-expr/source.wdl:6:18
  │
6 │     String a = x[]
  │                  ^ unexpected `]`

