crates/wdl-grammar/tests/parsing/empty-index-expr/source.wdl
# This is a test of parsing an empty index expression.

version 1.1

task foo {
    String a = x[]
}
